--- a/contact-us.html
+++ b/contact-us.html
@@ -102,166 +102,45 @@
     </nav>
   </header>
   <div class="position-relative">
-    <img class="d-none d-md-block w-100" src="Images\Consumables\consumables-header-desktop.jpg" alt="">
-    <img class="d-md-none d-block w-100" src="Images\Consumables\consumables-header-mobile.jpg" alt="">
+    <img class="d-none d-md-block w-100" src="Images\Contact\contact-header-desktop.jpg" alt="">
+    <img class="d-md-none d-block w-100" src="Images\Contact\contact-header-mobile.jpg" alt="">
     <div class="position-absolute white-overlay"></div>
     <div class="position-absolute overlay-text text-blue">
       <div class="container-md">
-        <h1><span class="yellow-border">CONSUMABLES</span></h1>
+        <h1><span class="yellow-border">CONTACT</span> US</h1>
       </div>
     </div>
   </div>
 
   <div class="container-md">
     <div class="pb-4 pb-md-5">
-      <div class="row justify-content-between">
-        <div class="col-md-5 col-lg-4  mt-3 pt-5">
-          <h2 class="text-center text-blue"><span class="yellow-border-h2">CATEGORIES</span></h2>
-          <div class="mt-0 mt-md-5 bg-light-grey1 py-4 d-none d-md-block">
-            <ul class="nav flex-column sidebar-list">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Biopsy Foam Pads</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Biopsy</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Cassettes – Tissue</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Containers</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microscope Slides</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Microtome Blades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Mounting Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paraffin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tissue Dyes</a>
-              </li>
-            </ul>
-          </div>
-          <div class="pt-4 d-block d-md-none sidebar">
-            <button type="button" class="btn btn-light vw-100 position-relative" data-toggle="collapse" data-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">Click to Expand <span class="down-arrow"><svg aria-hidden="true" height="25" width="25" focusable="false" data-prefix="fas" data-icon="caret-down"
-                  class="svg-inline--fa fa-caret-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
-                  <path fill="currentColor" d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path>
-                </svg></span> </button>
-            <div class="collapse vw-100"  id="collapseExample">
-              <div class="mt-0 mt-md-5 bg-light-grey1 py-4 text-center">
-                <ul class="nav flex-column sidebar-list">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Biopsy Foam Pads</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Biopsy</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Cassettes – Tissue</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Containers</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microscope Slides</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Microtome Blades</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Mounting Media</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Paraffin</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Tissue Dyes</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-7 pt-5  mt-3 text-center text-md-left">
-          <h2 class="text-blue yellow-border-h2 d-inline-block mb-0">CONSUMABLES</h2>
-          <div class="pt-5">
-            <h4 class="font-weight-bold">Large selection of quality consumables and most
-              standard products in stock for same day shipping</h4>
-            <p>Our goal is to be able to supply all your major laboratory consumables at a fair
-              price so you can buy from a single source. Our on-time delivery will guarantee
-              efficiency and cost savings for your laboratory</p>
-            <h4 class="font-weight-bold">Large selection of quality consumables and most
-              standard products in stock for same day shipping</h4>
-            <p>Our goal is to be able to supply all your major laboratory consumables at a fair
-              price so you can buy from a single source. Our on-time delivery will guarantee
-              efficiency and cost savings for your laboratory</p>
-            <h4 class="font-weight-bold">Large selection of quality consumables and most
-              standard products in stock for same day shipping</h4>
-            <p>Our goal is to be able to supply all your major laboratory consumables at a fair
-              price so you can buy from a single source. Our on-time delivery will guarantee
-              efficiency and cost savings for your laboratory</p>
-
-            <div class="row justify-content-between pr-0 pr-md-5 pt-3">
-              <div class="col-lg-5 pt-3 pt-md-4 text-center">
-                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
-                <h6 class="pt-3">Heratherm™ General Protocol
-                  Microbiological Incubator</h6>
-                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
-                <h6 class="pt-2">Category: <a href="#">Lorem ipsum</a> </h6>
-              </div>
-              <div class="col-lg-5 pt-3 pt-md-4 text-center">
-                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
-                <h6 class="pt-3">Heratherm™ General Protocol
-                  Microbiological Incubator</h6>
-                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
-                <h6 class="pt-2">Category: <a href="#">Lorem ipsum</a> </h6>
-              </div>
-              <div class="col-lg-5 pt-3 pt-md-4 text-center">
-                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
-                <h6 class="pt-3">Heratherm™ General Protocol
-                  Microbiological Incubator</h6>
-                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
-                <h6 class="pt-2">Category: <a href="#">Lorem ipsum</a> </h6>
-              </div>
-              <div class="col-lg-5 pt-3 pt-md-4 text-center">
-                <img class="w-100" src="Images\Consumables\cimage1.jpg" alt="">
-                <h6 class="pt-3">Heratherm™ General Protocol
-                  Microbiological Incubator</h6>
-                <a class="btn btn-primary btn-sm" href="#" role="button">MORE INFO</a>
-                <h6 class="pt-2">Category: <a href="#">Lorem ipsum</a> </h6>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="text-center text-md-left">
+        <h2 class="text-blue mt-3 pt-5 pb-4 pb-md-5">GET A <span class="yellow-border-h2">QUOTE!</span></h2>
+        <h4 class="font-weight-bold">Large selection of quality consumables and most
+          standard products in stock for same day shipping</h4>
+        <p>Our goal is to be able to supply all your major laboratory consumables at a fair
+          price so you can buy from a single source. Our on-time delivery will guarantee
+          efficiency and cost savings for your laboratory</p>
       </div>
+      <h2 class="text-center text-blue d-block d-md-none pt-5"><span class="yellow-border-h2">CONTACT</span> US</h2>
+        <form class="mt-5 mb-3">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="name">Your Name*</label>
+              <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="email">Your Email*</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="message">Your Message</label>
+            <textarea class="form-control" id="message" rows="4"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary rounded-0 btn-block font-weight-bold">Contact</button>
+        </form>
     </div>
-  </div>
-
-  <div class="container-md py-5 my-0 my-md-4">
-    <h2 class="text-blue text-center"><span class="yellow-border-h2">CONTACT</span> US</h1>
-      <form class="pt-5 mt-4">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="name">Your Name*</label>
-            <input type="text" class="form-control" id="name">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="email">Your Email*</label>
-            <input type="email" class="form-control" id="email">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="message">Your Message</label>
-          <textarea class="form-control" id="message" rows="4"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary rounded-0 btn-block font-weight-bold">Contact</button>
-      </form>
   </div>
 
   <footer class="mt-3 mt-md-5 position-relative">
